tests/fail/unsupported_foreign_function.rs
fn main() {
    extern "Rust" {
        fn foo();
    }

    unsafe {
        foo(); //~ ERROR: unsupported operation: can't call foreign function: foo
    }
}
